[tool.poetry]
name = "pygennaro"
version = "0.1.0"
description = "BNF parsing, formal grammar conversion and string generation utilities"
authors = ["Kien Tuong Truong <info@ktruong.dev>"]
license = "GPL-3.0-or-later"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Topic :: Artistic Software",
    "Topic :: Games/Entertainment"
]
exclude = ["example_rules/*", "examples/*"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
pygennaro = "pygennaro.commandline:command_line_handler"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
